# CMake_GD32H7xx_Lib

./: .gitmodules  README.md
cmake/: gcc-arm-none-eabi.cmake
cmake/GD32H7xx/: CMakeLists.txt
ldscripts/: gd32h7xx_flash.ld  gd32h7xx_flash.ld.in  gd32h7xx_ram.ld.in
